<resources>
    <string name="app_name">Autoreum</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="api_key">AIzaSyDtAqzvWKNP1ZeVR52PwBw_DVGpX49QlMQ</string>
    <string name="facebook_app_id">1715163968564526</string>
    <string name="fb_login_protocol_scheme">fb1715163968564526</string>
    <string name="blank_password">Please enter Password!</string>
    <string name="valid_email">Please enter valid Email!</string>
    <string name="blank_email">Please enter Email!</string>
    <string name="valid_password">Password should be minimum 8 characters long!</string>
    <string name="your_email">your email</string>
    <string name="your_otp">enter security code</string>
    <string name="password">Password</string>
    <string name="new_password">new password</string>
    <string name="current_password">current passwrod</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">GENDER</string>
    <string name="blank_c_password">Please enter Confirm Password!</string>
    <string name="valid_c_password">Password and Confirm Password must be same!</string>
    <string name="blank_name">Please enter Name!</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_">Cancel</string>
    <string name="no_internet">No Internet Connection. Please try again!</string>
    <string name="restore_your_passwrod">restore your password</string>
    <string name="restore_password">restore password</string>
    <string name="restore_password_">RESET PASSWORD</string>
    <string name="verify_email">VERIFY YOUR ACCOUNT</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signout">SIGN OUT</string>
    <string name="manage_video">PROFILE</string>
    <string name="search">Search</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="done">Done</string>
    <string name="try_again">Please try again</string>
    <string name="some_error_try_again">Some Error occured. Please try again!</string>
    <string name="facebook_registration_successful">Registration Successful. Signing In</string>
    <string name="normal_registration_successful">Registration Successful. Check your inbox in order to verify your account.</string>
    <string name="email_already_exist">Email already exists.</string>
    <string name="email_doesnt_exist">Email id does not exist!</string>
    <string name="email_or_password_wrong">Email and Password does not match!</string>
    <string name="email_not_activated">Account not verified yet. Check your inbox for verification code!</string>
    <string name="login_successful">Signed in successfully!</string>
    <string name="code_not_verified">Incorrect security code!</string>
    <string name="token_not_verified">Incorrect security token!</string>
    <string name="error_enter_code">Enter verification code!</string>
    <string name="password_reset_successfully">Password has been changed successfully.</string>
    <string name="logged_in_with_facebook">You have signed in with facebook!</string>
    <string name="logout_successfully">Signed out!</string>
    <string name="logout_alert">You have been logged in with another device.</string>
    <string name="signout_">Sign Out</string>
    <string name="user_not_logged_in">You are not logged in!</string>
    <string name="sign_in_">Sign In</string>
    <string name="register">Register</string>
    <string name="email_small">Email</string>
    <string name="password_small">password</string>
    <string name="forgot_password_small">Forgot password?</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_carmake">Please Enter Carmakers</string>
    <string name="password_contains_space">Password contains space.</string>
    <string name="password_must_be_8_to_15_characters">Password length must be from 8 to 15 characters.</string>
    <string name="please_enter_assword">Please enter Password</string>
    <string name="enter_mobile">Please enter mobile</string>
    <string name="enter_email">enter email</string>
    <string name="enter_email_or_mobile">Please enter Email or Mobile number</string>
    <string name="error_code_length">Username must be character 4 digit long.</string>
    <string name="enter_valid_username">Enter valid username.</string>
    <string name="enter_username">Please Enter username.</string>
    <string name="error_enter_email_or_username">Enter username or email.</string>
    <string name="error_password_space">Password contains space.</string>
    <string name="error_password_length">Password length must be from 8 to 15 characters</string>
    <string name="error_password">Please enter Password</string>
    <string name="error_state">Please enter State</string>
    <string name="error_subrub">Please enter Subrub</string>
    <string name="error_terms_polity">Please Accept Terms of use and Privacy Policy</string>
    <string name="error_postcode">Please enter Postcode</string>
    <string name="error_postcode_lenght">Postcode length must be 4 digit</string>
    <string name="error_confirmpassword">Please enter Confirm Password</string>
    <string name="error_not_match_pass">Password and Confirm password doesn’t match</string>
    <string name="enter_amount_should_be_morethanwallet">Entered amount should be less than Wallet Balance.</string>
    <string name="or">OR</string>
    <string name="code">+44</string>
    <string name="enter_phone">enter phone</string>
    <string name="already_have_account">Already have an account? sign in here</string>
    <string name="enter_password">enter password</string>
    <string name="no_selection">No Selection</string>
    <string name="please_enter_mobile">Please enter mobile number</string>
    <string name="mobile_length_10">Mobile number should be 10 digits </string>
    <string name="telephone_length_15">Telephone number should not exceed 15 digits </string>
    <string name="mobile_length_10_no_country_code">Please enter a valid mobile number. Mobile number should not exceed 15 digits. No need to enter country code.</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="enter_code">enter code</string>
    <string name="account_verified">Account verified successfully!</string>
    <string name="invalid_code">Verification code invalid. Please try again!</string>
    <string name="user_profile">User Profile</string>
    <string name="change_password">Change Password</string>
    <string name="terms_of_use">Terms Of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="short_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="medium_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry,and more recently with desktop publishing software like Aldus PageMaker including versions.</string>
    <string name="logout_push_notification">You have been logged out as You are logged in with new device.</string>
    <string name="logout">Logout</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="enter_text"></string>
    <string name="enter_email_or_number">enter email or mobile number</string>
    <string name="dont_have_account">Don\'t have an account? sign up here</string>
    <string name="enter_valied_email_or_mobile">Please enter valid Email or Mobile number</string>
    <string name="please_enter_valid_phone">Please enter valid Mobile number.</string>
    <string name="account_not_verified">Account is not verified yet. Check your inbox for verification code!</string>
    <string name="account_not_verified_resend">Account is not verified yet!</string>
    <string name="email_or_passwrod_incorrect">Email or Passwrod is incorrect</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="new_job_feed">Market Feed</string>
    <string name="my_garages">My Garages</string>
    <string name="transaction_history">Transaction History</string>
    <string name="how_it_work">How It Works</string>
    <string name="change_passeord">Change Password</string>
    <string name="contact_us_">Contact Us/Help</string>
    <string name="mailbox">Mail Box</string>
    <string name="notification">Notifications</string>
    <string name="setiings">My Setting</string>
    <string-array name="navigation_drawer_items">
        <item name="home">@string/home</item>
        <item name="profile">@string/my_profile</item>
        <item name="jobs_feed">@string/new_job_feed</item>
        <item name="garages">@string/my_garages</item>
        <item name="transaction_his">@string/transaction_history</item>
        <item name="hoe_works">@string/how_it_work</item>
        <item name="settings">@string/setiings</item>
        <item name="contactus">@string/contact_us_</item>


    </string-array>
    <string-array name="navigation_drawer_items_garage_owner">
        <item name="home">@string/home</item>
        <item name="profile">@string/my_profile</item>
        <item name="mailbox">@string/mailbox</item>
        <item name="notifications">@string/notification</item>
        <item name="transaction_his">@string/transaction_history</item>
        <item name="hoe_works">@string/how_it_work</item>
        <item name="settings">@string/setiings</item>
        <item name="contactus">@string/contact_us_</item>
    </string-array>
    <string name="enter_name">Please enter name.</string>
    <string name="enter_model_name">Please enter model name.</string>
    <string name="enter_year">Please enter year.</string>
    <string name="change_pass">Change Password</string>
    <string name="paypal">Paypal</string>
    <string name="user_login">USER LOGIN</string>
    <string name="garage_owner_login">GARAGE LOGIN</string>
    <string name="use_facebook_or_google_for_quicker_sign_up">Use Facebook or Google+ For Quicker Sign Up</string>
    <string name="user">User</string>
    <string name="garage_owner">Garage</string>
    <string name="post_a_job">Post a Job</string>
    <string name="my_home">My Home</string>
    <string name="my_jobs">My Jobs</string>
    <string name="job_details">Job Details</string>
    <string name="quotes">Quotes</string>
    <string name="discussion">Discussion</string>
    <string name="ask_the_crowd">Ask the crowd</string>
    <string name="my_crowd">My Crowd</string>
</resources>