<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  android:orientation="vertical">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:weightSum="10">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:weightSum="3.5">
        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2.5"
          android:layout_gravity="bottom|center"
          android:gravity="bottom|center"
          android:orientation="vertical"
          android:weightSum="6">
          <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/tempbg"
              android:visibility="visible"/>
          <aayushiprojects.greasecrowd.CustomViews.Widgets.Poppins_Bold_Textview
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="3"
              android:text="@string/app_name"
              android:textSize="@dimen/notes_dialog_menu_h"
              android:textColor="@color/red_color"
              android:gravity="center"
              android:layout_gravity="center"
              android:visibility="gone"/>


        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
          android:id="@+id/ll_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/activity_add_child_spinner_h"
          android:layout_marginRight="@dimen/activity_add_child_spinner_h"
          android:background="@drawable/white_bg">

          <aayushiprojects.greasecrowd.CustomViews.Widgets.Poppins_Medium_Textview
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_add_child_downarrow_h"
            android:gravity="center"
            android:text="@string/user_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_size_4" />
        </LinearLayout>

        <LinearLayout
          android:id="@+id/ll_garage_owner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/row_screening_detail_pb_margin_lr"
          android:layout_marginLeft="@dimen/activity_add_child_spinner_h"
          android:layout_marginRight="@dimen/activity_add_child_spinner_h"
            android:background="@drawable/white_bg">

          <aayushiprojects.greasecrowd.CustomViews.Widgets.Poppins_Medium_Textview
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_add_child_downarrow_h"
            android:gravity="center"
            android:text="@string/garage_owner_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_size_4" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
        <aayushiprojects.greasecrowd.CustomViews.Widgets.Poppins_Light_Textview
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:padding="@dimen/activity_add_child_new_margin_tb"
          android:gravity="center"
          android:text="@string/use_facebook_or_google_for_quicker_sign_up"
          android:textColor="@color/white_90"
          android:textSize="@dimen/txt_size_3"
          android:visibility="visible" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/grid_item_hw"
          android:layout_marginRight="@dimen/grid_item_hw"
          android:gravity="center"
          android:orientation="horizontal">

          <ImageView
            android:id="@+id/facebook"
            android:layout_width="@dimen/timer_w"
            android:layout_height="@dimen/timer_w"
            android:layout_marginRight="@dimen/activity_add_child_new_margin_tb"
            android:src="@drawable/facebook" />

          <ImageView
            android:id="@+id/google"
            android:layout_width="@dimen/timer_w"
            android:layout_height="@dimen/timer_w"
            android:layout_marginLeft="@dimen/activity_add_child_new_margin_tb"
            android:src="@drawable/g_plus" />

        </LinearLayout>

        <aayushiprojects.greasecrowd.CustomViews.Widgets.Poppins_Light_Textview
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_add_child_downarrow_w"
          android:layout_gravity="bottom"
          android:padding="@dimen/activity_add_child_new_margin_tb"
          android:gravity="center"
          android:text="Sign Up As"
          android:textColor="@color/white_90"
          android:textSize="@dimen/txt_size_4"
          android:visibility="visible" />

        <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="@dimen/activity_add_child_new_margin_tb"
          android:layout_marginLeft="@dimen/activity_add_child_downarrow_w"
          android:layout_marginRight="@dimen/activity_add_child_downarrow_w"
          android:background="@color/white_90" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/activity_add_child_downarrow_w"
          android:layout_marginRight="@dimen/activity_add_child_downarrow_w"
          android:orientation="horizontal">

          <aayushiprojects.greasecrowd.CustomViews.Widgets.Poppins_Medium_Textview
            android:id="@+id/User_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_add_child_new_margin_lr"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_4" />

          <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:background="@color/white_90" />


          <aayushiprojects.greasecrowd.CustomViews.Widgets.Poppins_Medium_Textview
            android:id="@+id/GarageUser_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_add_child_new_margin_lr"
            android:gravity="center"
            android:text="@string/garage_owner"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_3" />

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
          android:id="@+id/login_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:layout_gravity="center_horizontal"
          android:text="connect_with_facebook"
          android:visibility="gone" />

      </LinearLayout>

    </LinearLayout>

  </ScrollView>
</LinearLayout>